test/corpus/conditionals.txt
================================================================================
Foreach
================================================================================

foreach a {1 2 3 4 5} {
    put $i
}

--------------------------------------------------------------------------------

(source_file
  (foreach
    (simple_word)
     (braced_word
       (command
         (simple_word)
         (word_list
           (simple_word)
           (simple_word)
           (simple_word)
           (simple_word))))
    (braced_word
      (command
        (simple_word)
        (word_list
          (variable_substitution
            (id)))))))

================================================================================
if elseif else
================================================================================

if $hello {
    echo hi
} elseif $hello {
    echo hi
} elseif {$openindex==-1} {
    # comment
} else {
    echo bye
}

--------------------------------------------------------------------------------

(source_file
  (conditional
    (expr
      (variable_substitution
        (id)))
    (braced_word
      (command
        (simple_word)
        (word_list
          (simple_word))))
    (elseif
      (expr
        (variable_substitution
          (id)))
      (braced_word
        (command
          (simple_word)
          (word_list
            (simple_word)))))
    (elseif
        (expr
        (binop_expr
            (variable_substitution
            (id))))
        (braced_word
        (comment)))
    (else
      (braced_word
        (command
          (simple_word)
          (word_list
            (simple_word)))))))
